<resources>
    <string name="app_name">BSM</string>
    <string name="password">password</string>
    <string name="button_save">Save</string>
    <string name="create_password_label">Choose password: </string>
    <string name="button_login">Login</string>
    <string name="invalid_password">Invalid password. Try again.</string>
    <string name="button_change_password">Change password</string>
    <string name="change_password_label">New password:</string>
    <string name="login_password_label">Your password:</string>
    <string name="my_note">My note (pl: moja notatka)</string>
</resources>
