<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePasswordActivity">


    <EditText
        android:id="@+id/password"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/send_password"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/password" />

    <Button
        android:id="@+id/send_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="28dp"
        android:onClick="createPassword"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button_save" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_password_label"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341"
        tools:text="@string/create_password_label" />

</androidx.constraintlayout.widget.ConstraintLayout>